traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:16: error: not found: type boolean
  var res:boolean=false
          ^